added add employee

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,17 +1,14 @@
 body {
 }
-/* .employeeForm {
-  margin: 10% 30%;
-} */
 .btnCenter {
   margin: 0 0 0 45%;
 }
 .dateNow {
-  margin: 0% auto;
+  margin: 1% 5% 0 29%;
 }
 .btn-group {
   padding: 2% 0% 2% 10%;
-  margin: 0 10% 0 150%;
+  margin: 0 10% 0 100%;
 }
 .workPlace {
   margin: 10% 25%;
