--- a/src/style/main.css
+++ b/src/style/main.css
@@ -21,16 +21,34 @@ body {
   padding: 0px 93% 0 0px;
 }
 input[type="date"] {
-  margin: 10px 0;
+  margin: 0 auto;
   min-width: 216px;
 }
-.sp1 {
-  margin: 0 16% 0 0;
-}
-.sp2 {
-  margin: 0 13% 0 0;
-  padding: 0 0 0 1px;
-}
+.sp1,
+.sp2,
 .sp3 {
-  margin: 0 14% 0 0;
+  margin: 0 auto;
+}
+
+.status {
+  margin: 21px 0 15px;
+  min-width: 230px;
+}
+.vacationFrom {
+  max-width: 250px;
+  text-align: center;
+}
+.vacationOn {
+  max-width: 250px;
+  text-align: center;
+}
+.custom-select {
+  min-width: 250px;
+}
+.name {
+  font-size: 1.3em;
+}
+.sp2,
+.sp3 {
+  margin: 10px 0;
 }
